flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: ecommerce
  labels:
    app: ecommerce
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce
      tier: backend
  template:
    metadata:
      labels:
        app: ecommerce
        tier: backend
    spec:
      containers:
      - name: flask-backend
        image: tiangolo/uwsgi-nginx-flask:python3.8
        ports:
        - containerPort: 80
