mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: ecommerce
  labels:
    app: ecommerce
spec:
  selector:
    matchLabels:
      db: mysql  
  serviceName: mysql-service
  replicas: 1
  template:
    metadata:
      labels:
        app: ecommerce
        db: mysql  
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
      labels:
        app: ecommerce
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
