nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ecommerce
  labels:
    app: ecommerce
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce
      tier: frontend
  template:
    metadata:
      labels:
        app: ecommerce
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
