flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: ecommerce
  labels:
    app: ecommerce
    tier: backend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ecommerce
    tier: backend
  type: ClusterIP
