mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: ecommerce
  labels:
    app: ecommerce
    db: mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
  selector:
    db: mysql
